--- a/src/main/resources/assets/css/table.css
+++ b/src/main/resources/assets/css/table.css
@@ -1,3 +1,54 @@
+/*Иконка вкладки Соревнования*/
+#sorevButt{
+    -fx-background-image: url("../images/icons/home2.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position:left 10px top 15px;
+}
+#sorevButt:selected{
+    -fx-background-image: url("../images/icons/home4.png");
+}
+/*Иконка вкладки Старты*/
+#zabegButt{
+    -fx-background-image: url("../images/icons/running.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position:left 10px top 15px;
+}
+#zabegButt:selected{
+    -fx-background-image: url("../images/icons/running1.png");
+}
+/*Иконка вкладки Эстафеты*/
+#relayButt{
+    -fx-background-image: url("../images/icons/relay.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position:left 10px top 15px;
+}
+#relayButt:selected{
+/*There isn't image for selected*/
+}
+/*Иконки для вкладки Мониторинг*/
+#checkButt{
+    -fx-background-image: url("../images/icons/cctv-camera.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position:left 10px top 15px;
+}
+#checkButt:selected{
+    -fx-background-image: url("../images/icons/cctv-camera-blue.png");
+}
+/*Иконки для вкладки Клубы*/
+#clubsButt{
+    -fx-background-image: url("../images/icons/leader.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position:left 10px top 15px;
+}
+#clubsButt:selected{
+    /*There isn't image for selected*/
+}
+
 @font-face {
     src: url('../../assets/fonts/Roboto-Regular.ttf');
 }
