--- a/src/main/resources/assets/css/table.css
+++ b/src/main/resources/assets/css/table.css
@@ -1,12 +1,12 @@
 /*Иконка вкладки Соревнования*/
 #sorevButt{
-    -fx-background-image: url("../images/icons/home2.png");
+    -fx-background-image: url("../images/icons/home.png");
     -fx-background-size: 32 32;
     -fx-background-repeat: no-repeat;
     -fx-background-position:left 10px top 15px;
 }
 #sorevButt:selected{
-    -fx-background-image: url("../images/icons/home4.png");
+    -fx-background-image: url("../images/icons/home_blue.png");
 }
 /*Иконка вкладки Старты*/
 #zabegButt{
@@ -16,7 +16,7 @@
     -fx-background-position:left 10px top 15px;
 }
 #zabegButt:selected{
-    -fx-background-image: url("../images/icons/running1.png");
+    -fx-background-image: url("../images/icons/running_blue.png");
 }
 /*Иконка вкладки Эстафеты*/
 #relayButt{
@@ -26,7 +26,17 @@
     -fx-background-position:left 10px top 15px;
 }
 #relayButt:selected{
-/*There isn't image for selected*/
+    -fx-background-image: url("../images/icons/relay_blue.png");
+}
+/*Иконки для вкладки Клубы*/
+#clubsButt{
+    -fx-background-image: url("../images/icons/leader.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position:left 10px top 15px;
+}
+#clubsButt:selected{
+    -fx-background-image: url("../images/icons/leader_blue.png");
 }
 /*Иконки для вкладки Мониторинг*/
 #checkButt{
@@ -37,16 +47,6 @@
 }
 #checkButt:selected{
     -fx-background-image: url("../images/icons/cctv-camera-blue.png");
-}
-/*Иконки для вкладки Клубы*/
-#clubsButt{
-    -fx-background-image: url("../images/icons/leader.png");
-    -fx-background-size: 32 32;
-    -fx-background-repeat: no-repeat;
-    -fx-background-position:left 10px top 15px;
-}
-#clubsButt:selected{
-    /*There isn't image for selected*/
 }
 
 @font-face {
