--- a/src/main/resources/view/marksmonitor/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/marksmonitor/MarksMonitorCompetition.fxml
@@ -31,7 +31,7 @@
          <children>
             <GridPane prefHeight="178.0" prefWidth="1069.0" GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="466.39996948242185" minWidth="230.0" prefWidth="443.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="466.39996948242185" minWidth="230.0" prefWidth="443.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="771.3999938964844" minWidth="10.0" prefWidth="390.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="771.3999938964844" minWidth="10.0" prefWidth="242.79999999999995" />
               </columnConstraints>
@@ -49,45 +49,42 @@
                   <GridPane alignment="CENTER">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="268.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.20001220703125" minWidth="10.0" prefWidth="163.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.20001220703125" minWidth="10.0" prefWidth="165.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="21.0" minHeight="7.0" prefHeight="7.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="34.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="116.0" minHeight="89.0" prefHeight="94.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="95.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="stopwatch" editable="false" maxWidth="-Infinity" prefHeight="97.0" prefWidth="259.0" stylesheets="@../../assets/css/TextFieldLarge.css" text="00:00:00:00" translateX="5.0" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                        <TextField fx:id="stopwatch" alignment="CENTER" editable="false" maxWidth="-Infinity" prefHeight="95.0" prefWidth="260.0" stylesheets="@../../assets/css/TextFieldLarge.css" text="00:00:00:00" translateX="5.0" GridPane.rowIndex="1">
                            <font>
                               <Font size="36.0" />
                            </font>
                         </TextField>
-                        <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <children>
-                              <Button fx:id="startButton" layoutX="26.0" layoutY="49.0" maxHeight="42.0" maxWidth="112.0" minHeight="26.0" minWidth="112.0" mnemonicParsing="false" onAction="#startButtonClick" prefHeight="26.0" prefWidth="112.0" stylesheets="@../../assets/css/Buttons.css" text="Старт" textFill="WHITE">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                                 <styleClass>
-                                    <String fx:value="btn" />
-                                    <String fx:value="btn-small" />
-                                    <String fx:value="btn-success" />
-                                 </styleClass>
-                              </Button>
-                              <Button fx:id="timeStart" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="15.0" mnemonicParsing="false" onAction="#timeStartButton" prefHeight="28.0" prefWidth="134.0" stylesheets="@../../assets/css/Buttons.css" text="Задать время" textFill="WHITE">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                                 <styleClass>
-                                    <String fx:value="btn" />
-                                    <String fx:value="btn-small" />
-                                    <String fx:value="btn-warning" />
-                                 </styleClass>
-                              </Button>
-                           </children>
-                        </Pane>
-                        <Button fx:id="resetTim" alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#resetTimeButton" prefHeight="28.0" prefWidth="134.0" stylesheets="@../../assets/css/Buttons.css" text="Очистить табло" textFill="WHITE" translateX="16.0" translateY="2.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <Button fx:id="startButton" mnemonicParsing="false" onAction="#startButtonClick" prefWidth="134.0" stylesheets="@../../assets/css/Buttons.css" text="Старт" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-small" />
+                              <String fx:value="btn-success" />
+                           </styleClass>
+                           <GridPane.margin>
+                              <Insets top="3.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="timeStart" alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#timeStartButton" prefWidth="134.0" stylesheets="@../../assets/css/Buttons.css" text="Задать время" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-small" />
+                              <String fx:value="btn-warning" />
+                           </styleClass>
+                        </Button>
+                        <Button fx:id="resetTim" mnemonicParsing="false" onAction="#resetTimeButton" prefWidth="134.0" stylesheets="@../../assets/css/Buttons.css" text="Очистить табло" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -96,24 +93,37 @@
                               <String fx:value="btn-small" />
                               <String fx:value="btn-primary" />
                            </styleClass>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
                         </Button>
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="20.0" styleClass="label-regular" stylesheets="@../../assets/css/AppLabel.css" text="Время начала:" textAlignment="CENTER">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="10.0" />
+                           </padding>
+                        </Label>
+                        <TextField fx:id="timeStarted" alignment="CENTER" maxWidth="-Infinity" prefHeight="26.0" prefWidth="112.0" promptText="12:00:00:00" stylesheets="@../../assets/css/TextField.css" GridPane.halignment="CENTER">
+                           <GridPane.margin>
+                              <Insets left="60.0" />
+                           </GridPane.margin>
+                        </TextField>
                      </children>
-                     <padding>
-                        <Insets right="10.0" />
-                     </padding>
                      <GridPane.margin>
-                        <Insets bottom="1.0" />
+                        <Insets />
                      </GridPane.margin>
                   </GridPane>
-                  <TextField fx:id="lastNumber" alignment="CENTER" editable="false" maxWidth="150.0" minWidth="100.0" prefHeight="110.0" prefWidth="138.0" promptText="№12" stylesheets="@../../assets/css/TextFieldLarge.css" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                  <TextField fx:id="lastNumber" alignment="CENTER" editable="false" maxWidth="150.0" minWidth="100.0" prefHeight="110.0" prefWidth="138.0" promptText="№12" stylesheets="@../../assets/css/TextFieldLarge.css" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                      <font>
                         <Font size="48.0" />
                      </font>
                   </TextField>
-                  <Label styleClass="label-regular" stylesheets="@../../assets/css/AppLabel.css" text="Прошедший участник" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="TOP" />
+                  <Label styleClass="label-regular" stylesheets="@../../assets/css/AppLabel.css" text="Прошедший участник" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
                </children>
                <padding>
-                  <Insets bottom="10.0" />
+                  <Insets bottom="10.0" right="10.0" />
                </padding>
             </GridPane>
             <GridPane prefWidth="1058.0" GridPane.rowIndex="3">
@@ -147,7 +157,7 @@
                         <String fx:value="btn-common" />
                         <String fx:value="btn-primary" />
                      </styleClass></Button>
-                  <Button mnemonicParsing="false" prefHeight="36.0" prefWidth="231.0" stylesheets="@../../assets/css/Buttons.css" text="Печать стартового протокола" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT">
+                  <Button mnemonicParsing="false" stylesheets="@../../assets/css/Buttons.css" text="Печать стартового протокола" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -205,22 +215,16 @@
             </TabPane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.valignment="TOP">
                <children>
-                  <Button fx:id="addGroup" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" layoutX="447.0" layoutY="-4.0" mnemonicParsing="false" onAction="#addingGroup" stylesheets="@../../assets/css/Buttons.css" text="Редактировать группы" textAlignment="CENTER" textFill="WHITE" textOverrun="LEADING_ELLIPSIS">
+                  <Button fx:id="addGroup" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" graphicTextGap="1.0" layoutX="435.0" layoutY="4.0" mnemonicParsing="false" onAction="#addingGroup" stylesheets="@../../assets/css/Buttons.css" text="Редактировать группы" textAlignment="CENTER" textFill="WHITE" textOverrun="LEADING_ELLIPSIS">
                      <font>
                         <Font size="14.0" />
                      </font>
                      <styleClass>
                         <String fx:value="btn" />
                         <String fx:value="btn-primary" />
-                        <String fx:value="btn-common" />
+                        <String fx:value="btn-small" />
                      </styleClass>
                   </Button>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="31.0" layoutY="8.0" prefHeight="20.0" prefWidth="169.0" styleClass="label-regular" stylesheets="@../../assets/css/AppLabel.css" text="Время начала:" textAlignment="CENTER">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="timeStarted" alignment="CENTER" layoutX="239.0" layoutY="5.0" maxWidth="-Infinity" prefHeight="26.0" prefWidth="112.0" promptText="12:00:00:00" stylesheets="@../../assets/css/TextField.css" />
                </children>
             </Pane>
          </children>
